--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 .row-content {
 	margin: 0px auto;
 	padding: 50px 0px 50px 0px;
-	border-bottom: 1px ridge gray;
+	border-bottom: 1px solid #ccc;
 	min-height: 400px;
 }
 
