--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,19 @@ body {
 	padding: 10px;
 }
 
+.carousel {
+	background: #512DA8;
+}
+.carousel-item {
+	height: 300px;
+}
+
+.carousel-item img{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	min-height: 300px;
+}
 
 /*dt::after {
   content: ": ";
